"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-11-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-92:
	  lexer/file_manager.cc: fallback to searching local directory LAST, 
		which is contrary to traditional cpp, which searches
		locally FIRST before checking include paths.
	  Rationale: be able to override local directory with -I flags, 
		and user can always specify search order of '-I .'
	  test case added: test/lexer/include-path-01


2007-11-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-91:
	  hacpp (flatten) bug fix: match fake-identifiers to avoid
		substrings that happen to be keywords, duh!
		Gracias, Tadeo, for finding and reporting.
	  Test cases added test/lexer dir.  


2007-11-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-90:
	  lexer/hacflat-lex.ll: added global variable to control whether
		or not #FILE { ... } wrappers are printed or omitted, 
		still enabled by default, but...
	  main/flatten.cc: pass -w (for no-wrap) to suppress wrappers.  
	  test suite updated accordingly.


2007-11-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-89:
	  Added: lexer/flex_lexer_state.cc.  Defines destructor
		the deallocates the buffer or buffer stack.  
		Uses newly added configure tests for lexer features.
		Header file updated accordingly.  
	  Noted false-positive memory leak report in BUGS.  
		Not a bug, libstdc++ uses pool allocator.


2007-10-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-88:
	  cygwin-compatibility accomodations (part 1)
	  configure additions in top-srcdir, 
		and corresponding library uses (util/ChangeLog)


2007-10-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-87: